--- a/template/pom.xml
+++ b/template/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.richfaces.examples</groupId>
         <artifactId>richfaces-example-parent</artifactId>
-        <version>4.3.8.ayg</version>
+        <version>4.3.9-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
